[project]
name = "chialisp_builder"
description = "Allow on-demand builds of chialisp with recursive dependency checking."
authors = [{name = "Richard Kiss", email = "him@richardkiss.com"}]
license = {file = "LICENSE"}
readme = "README.md"
version = "0.1.0"
dependencies = ["clvm_tools_rs", "runtime_builder>=0.1.0"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
